# pytest_selenium_stepik_course

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_items.py
